12-egress-communication/istio-setup/egress-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: external-istiodemo
  namespace: istio-system
spec:
  host: external.istiodemo 
  trafficPolicy:
    portLevelSettings:
    - port:
       number: 32172
      tls:
         mode: MUTUAL
         credentialName: egress-mutual-credential
         sni: external.istiodemo
